# pycon2025-benchmarking

./: .docker.env  .gitignore  LICENSE  README.md  benchmark copy.py  benchmark.py  benchmark_wrk.py  docker-compose.benchmark.yml  docker-compose.wrk.yml  docker-compose.yml  linux_setup.sh  main.py  pyproject.toml
benchmark_runner/: Dockerfile  requirements.txt
data/: products.csv
django/: Dockerfile  requirements.txt
django/core/: settings.py  urls.py
django/django.venv/: pyvenv.cfg
django/products/: models.py  serializers.py  urls.py  views.py
django/products/migrations/: 0001_initial.py
django/products/templates/: fortune.html
express/: Dockerfile  README.md  package-lock.json  package.json
express/prisma/: schema.prisma
express/prisma/migrations/20250727113248_init/: migration.sql
express/src/: server.js
express/src/controllers/: basic.js  product.js
express/src/routes/: basic.js  product.js
express/src/views/: fortune.ejs
fastapi/: Dockerfile  main.py  requirements.txt
fastapi-async/: requirements.txt
fastapi-sync/: Dockerfile  main.py  requirements.txt
fastapi-sync/templates/: fortune.html
flask/: Dockerfile  README.md  app.py  requirements.txt
gin/: Dockerfile  README.md  go.mod  go.sum  main.go
gin/templates/: fortune.html
lua_scripts/: delete_fastapi.lua  post_Gin.lua  put_django.lua
results/: PyCon2025-benchmarking-results - benchmark_wrk_results_20250807_050214.csv  benchmark_wrk_results.csv
